--- a/index.htm
+++ b/index.htm
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>ATTENDANCE</title>
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="C:\Users\home\Desktop\proj\fontawesome-web\css\all.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="all.min.css">
   </head>
   <body>
     <header>
