--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
   <head>
     <title>ATTENDANCE</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css ">
   </head>
   <body>
     <header>
